--- a/tetromino/2018045641_오윤석.ipynb
+++ b/tetromino/2018045641_오윤석.ipynb
@@ -594,7 +594,7 @@
     "    DISPLAYSURF.blit(levelSurf, levelRect)\n",
     "    \n",
     "    # draw the time text\n",
-    "    timeSurf = BASICFONT.render('Playtime: %d' %(time.time()- startTime), True, TEXTCOLOR)\n",
+    "    timeSurf = BASICFONT.render('Playtime: %d sec' %(time.time()- startTime), True, TEXTCOLOR)\n",
     "    timeRect = timeSurf.get_rect()\n",
     "    timeRect.topright = (WINDOWWIDTH - 500, 20)\n",
     "    DISPLAYSURF.blit(timeSurf, timeRect)\n",
